// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ContactAccountSelection 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header emptyList"
  >
    <button
      class="button left hasOptions"
      type="button"
    >
      <span
        aria-label="su-plus-circle"
        class="su-plus-circle icon"
      />
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
    <div
      class="label"
    />
  </div>
  <ul
    class="list"
  />
</div>
`;

exports[`Render ContactAccountSelection with data 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header"
  >
    <button
      class="button left hasOptions"
      type="button"
    >
      <span
        aria-label="su-plus-circle"
        class="su-plus-circle icon"
      />
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
    <div
      class="label"
    />
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          <div
            class="item"
          >
            Max Mustermann
          </div>
        </div>
        <div
          class="buttons"
        >
          <button
            class="button"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          <div
            class="item"
          >
            Sulu
          </div>
        </div>
        <div
          class="buttons"
        >
          <button
            class="button"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle sortable"
        >
          <span
            aria-label="su-more"
            class="su-more"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          <div
            class="item"
          >
            Erika Mustermann
          </div>
        </div>
        <div
          class="buttons"
        >
          <button
            class="button"
            type="button"
          >
            <span
              aria-label="su-trash-alt"
              class="su-trash-alt"
            />
          </button>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render disabled ContactAccountSelection 1`] = `
<div
  class="multiItemSelectionClass disabled"
>
  <div
    class="header emptyList"
  >
    <button
      class="button left hasOptions"
      disabled=""
      type="button"
    >
      <span
        aria-label="su-plus-circle"
        class="su-plus-circle icon"
      />
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
    <div
      class="label"
    />
  </div>
  <ul
    class="list"
  />
</div>
`;

exports[`Render loading ContactAccountSelection 1`] = `
<div
  class="multiItemSelectionClass"
>
  <div
    class="header emptyList"
  >
    <button
      class="button left hasOptions"
      type="button"
    >
      <span
        aria-label="su-plus-circle"
        class="su-plus-circle icon"
      />
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
    <div
      class="label"
    >
      <div
        class="loader"
      >
        <div
          class="spinner"
          style="width:24px;height:24px"
        >
          <div
            class="doubleBounce1"
          />
          <div
            class="doubleBounce2"
          />
        </div>
      </div>
    </div>
  </div>
  <ul
    class="list"
  />
</div>
`;
